<resources>
    <string name="app_name">PetMooby</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="facebook_app_id">2065622470139882</string>
    <string name="fb_login_protocol_scheme">fb2065622470139882</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="VeterinaryPartners">Veterinary Partners</string>
    <string name="RateApp">Rate the App</string>
    <string name="TermsOfUse">Terms of Use</string>
    <string name="ContactUs">Contact Us</string>
    <string name="Logout">Logout</string>
    <string name="loading">Loading</string>
    <string name="wait">Wait</string>
    <string name="Advice">Advice</string>
    <string name="msgValidationTitle">Validation!</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="title_activity_veterinary_partner_detail">VeterinaryPartnerDetailActivity</string>
    <string name="Contact">Contact</string>
    <string name="About">About</string>
    <string name="Options">Options</string>
    <string name="helpUs">Help us improve our App by sending your opnion or contct us for a partnership. Thank you for enjoin!</string>
    <string name="Home">Home</string>
    <string name="Menu">Menu</string>
    <string name="title_menu">Menu</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_tip">Tip</string>
    <string name="Calendar">Calendar</string>
    <string name="Notifications">Notifications</string>
    <string name="Tips">Tips</string>
    <string name="emailContatSubject">Contact made by petmoob Android App</string>
    <string name="emailBody">Olá</string>
    <string name="emailContactTitle">Contact e-mail</string>
    <string name="end">End</string>
    <string name="noModeResults">No more results!</string>
    <string name="noPetsRegisteredYet">You have not registered any pets!</string>
    <string name="savingUser">Saving user...</string>
    <string name="checkingUser">Checking user...</string>
    <string name="gettingMyPets">Getting your pets ...</string>
    <string name="addNew">New</string>
    <string name="addNewPetBreedAdvice">You don\'t need to enter this field if your little friend doesn\'t hava a defined breed or you don\'t know</string>
    <string name="health">Health</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="animal">Animal</string>
    <string name="breed">Breed</string>
    <string name="vaccine">Vaccine</string>
    <string name="medicinalTreatment">Medicinal Treatment</string>
    <string name="addPet">Add a new Pet</string>
    <string name="save">Save</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="bird">Bird</string>
    <string name="errorOnUploadingImage">Erro on uploaad image.</string>
    <string name="selectAPicture">Select your image:</string>
    <string name="cantGetFileImage">Can\'t get image file.Sorry!</string>
    <string name="formatDate">MM-dd-yyyy</string>
    <string name="savingImage">Saving Image ...</string>
    <string name="errorWhileCapturingImage">Error while capturing image</string>
    <string name="youCanOnlyHaveSomeAnimals">You can have just 8 pets.</string>
    <string name="exclude">Exclude</string>
    <string name="removedPet">The pet was removed.</string>
    <string name="removingPet">Removing pet</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="vaccines">Vaccines</string>
    <string name="vaccineReminder">Vaccine Reminder</string>
    <string name="date">Date</string>
    <string name="vaccineTextAdvice">Usually the interval between vaccines is annual, but the first application may have a different interval. Talk to your vet. The vaccine alarm will be repeated each year on the same day.</string>
    <string name="vaccineRecord">Vaccine recorde</string>
    <string name="veterinaryOrClinic">Veterinary or Clinic</string>
    <string name="vaccineDateApplication">Vaccine date aplication</string>
    <string name="price">Price</string>
    <string name="notes">Notes</string>
    <string name="applyVaccine">Apply Vaccine</string>
    <string name="history">History</string>
    <string name="dalete">delete</string>
    <string name="delete">delete</string>
    <string name="treatments">Treatments</string>
    <string name="treatmentType">Treatment Type</string>
    <string name="treatmentFrequence">Treatment Fraquence</string>
    <string name="alarm">Alarm</string>
    <string name="frequencyAlarmTreatmentText">Frequency for the alarm informing you about the treatment. The start and end date of treatment does not influence the alarm. When the alarm is on it sounds according to the frequency you entered. If you do not wish to receive notifications informing you about the treatment, you only have to turn off the alarm.</string>
    <string name="periodOfTreatmentAlarm">Perio em que será informado no calendário. O alrme não segue as regras das datas informadas, somente o tempo de intervalo.</string>
    <string name="saveAnyInfoAboutTreatment">Coloque qualquer informação sobre o tratamento que você deseja guardar.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="tellUsTheVaccineDescriptio">Please, give the vaccine description</string>
    <string name="pleaseGiveAVaccineDate">Please, give a vaccine name.</string>
    <string name="giveTheVaccineClinic">Please, give the date</string>
    <string name="savedSuccess">Saved</string>
    <string name="wasNotPossibleSaveVaccine">Was not possible save the vaccine</string>
    <string name="errorOnSaveVaccine">Erro while trying to save the vaccine</string>
    <string name="noResultAtThisMoment">No Result at this moment</string>
    <string name="giveAnApplicationDate">Please give an application date</string>
    <string name="giveAnApplicationPrice">Please give a price.</string>
    <string name="areSureDeleteHistory">Are you sure that you want to delete this historic</string>
    <string name="currencyRegex">$,.</string>
    <string name="vaccineDeleted">Vaccine Deleted</string>
    <string name="vermifuge">VERMIFUGE</string>
    <string name="medicine">MEDICINE</string>
    <string name="always">Always</string>
    <string name="informed">Informed</string>
    <string name="informTheDate">Inform the date</string>
    <string name="initialDate">Initial Date</string>
    <string name="finalDate">Final Date</string>
    <string name="pleaseGiveADate">Please inform a date.</string>
    <string name="pleaseSelectATreatmentType">Please select a treatment type.</string>
    <string name="pleaseSelectATreatmentInterval">Please select a treatment interval.</string>
    <string name="pleaseSelectATreatmentPeriod">Please select a treatment period</string>
    <string name="treatmentName">Treatment Name</string>
    <string name="pleaseGiveATreatmentName">Please give a treatment name.</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="treatmentDeleted">Treatment Deleted</string>
    <string name="treatment">Treatment</string>
    <string name="areYouSureToDeleteThisTreatment">Are you sure that you want delete this treatment?</string>
    <string name="pleaseIntervalShouldGreatThenZero">Please, interval shoud be great than zero.</string>
    <string name="pleaseFinalDateShoulBeGreateThanInitial">Please, final date shoud be greate than initial</string>
    <string name="areYouSureToDeleteThisVaccine">Are you sure to delete this vaccine?</string>
    <string name="youCanOnlyHaveSomeVaccines">You can only have 8 vaccines registered.</string>
    <string name="youCanOnlyHaveSomeTreatments">You can only have 8 registered treatments.</string>
    <string name="emailInvalid">This e-mail is not valid.</string>
    <string name="pleaseGiveYourName">Please, tell us your name.</string>
    <string name="pleaseGiveYourEmail">Please, tell us your e-mail.</string>
    <string name="pwdShoulBeNotEmpty">Please, Password should be not empty.</string>
    <string name="confirmPwdShoulBeNotEmpty">Please, confirm the password.</string>
    <string name="emailAlreadyExist">E-mail already registered. Maybe you forgot your password.</string>
    <string name="pleaseGiveAEmail">Please, set a e-mail address.</string>
    <string name="pleaseEnterAPassWord">Please enter a password</string>
    <string name="invalidCredentials">Invalid credentials. Please check your e-mail and password and try again.</string>
    <string name="ThreeDotsExplanation">The three dots above symbolize that for that date there are events. To view them, click on the date.</string>
    <string name="notificationVaccine">Vaccine Notification</string>
    <string name="notificationVaccineBody">Notification vaccine body</string>
    <string name="hour">Hour</string>
    <string name="every">every</string>
    <string name="hours">hours</string>
    <string name="one">one</string>
    <string name="oneHour">one</string>
    <string name="select">Select</string>
    <string name="followOurTips">Follow our tips, every week a new tip for your PET.</string>
    <string name="logoutMessage">When logout is done all the treatments alarms are turned off. Do you really want to logout?</string>
    <string name="loginMessage">For proper operation of Petmooby, all treatment alarms will be turned off every time you log in. You can turn them back on. Vaccine alarms continue to function normally.</string>
    <string name="listOfPartners">List of Partners</string>
    <string name="vaccineTextNotification">%1$s needs to be vaccinated </string>
    <string name="takeAPicture">Take a picture</string>
    <string name="gallery">Gallery</string>
    <string name="hitoricWasRemoved">Historic was removed</string>
    <string name="areYouSureDeleteHistoric">Are you sure to delete this historic?</string>
    <string name="vaccineTextFor">for %1$s in day: %2$s.</string>
    <string name="copyright">Copyright \u00A9 2018 Petmooby. All rights reserved.</string>
    <string name="next">next</string>
    <string name="Next">Next</string>
    <string name="veterinaryAttendance">Veterinary Attendance</string>
    <string name="addNewAttendance">New Attendance</string>
    <string name="veterinary">veterinary</string>
    <string name="clinic">clinic</string>
    <string name="rating">rating</string>
    <string name="dates">dates</string>
    <string name="returnDate">return</string>
    <string name="attendance">attendance</string>
    <string name="noteAttendanceAdvice">Write down the information about the care of your PET</string>
    <string name="upload">upload</string>
    <string name="menuNearVets">Nearby veterinarians</string>
</resources>