<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="6dp"
    android:orientation="vertical">
    <Button
        style="@style/MainMenuButton"
        android:id="@+id/btnMenuAppName"
        android:text="@string/app_name"
        android:drawableStart="@drawable/logo_redondo_30"
        android:background="@drawable/btn_corners"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Options"
        android:textColor="@color/black"
        android:layout_marginTop="48dp"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textAllCaps="true"
        />

    <Button
        style="@style/MainMenuButton"
        android:id="@+id/btnMenuVeterinaryPartners"
        android:text="@string/VeterinaryPartners"
        android:drawableStart="@drawable/icons8_doctor_30"
        android:drawableEnd="@drawable/ic_chevron_right_white"
        android:background="@drawable/btn_corners"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/About"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textAllCaps="true"
        />
    <Button
        style="@style/MainMenuButton"
        android:id="@+id/btnMenuRateApp"
        android:text="@string/RateApp"
        android:drawableStart="@drawable/icons8_start_30"
        android:drawableEnd="@drawable/ic_chevron_right_white"
        android:background="@drawable/btn_corners_top"
        />

    <Button
        style="@style/MainMenuButton"
        android:id="@+id/btnMenuMap"
        android:text="@string/menuNearVets"
        android:drawableEnd="@drawable/ic_chevron_right_white"
        android:drawableStart="@drawable/icons8_location_marker_30"
        />

    <Button
        style="@style/MainMenuButton"
        android:id="@+id/btnMenuTermsOfUse"
        android:text="@string/TermsOfUse"
        android:drawableEnd="@drawable/ic_chevron_right_white"
        android:drawableStart="@drawable/icons8_terms_use_30"
        />

    <Button
        style="@style/MainMenuButton"
        android:id="@+id/btnMenuContactUs"
        android:text="@string/ContactUs"
        android:drawableEnd="@drawable/ic_chevron_right_white"
        android:drawableStart="@drawable/icons8_nova_mensagem_30"
        android:background="@drawable/btn_corners_bottom"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:text="@string/helpUs"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textAllCaps="false"
        />
    <Button
        style="@style/MainMenuButton"
        android:id="@+id/btnMenuLogout"
        android:text="@string/Logout"
        android:drawableStart="@drawable/icons8_logout_30"
        android:background="@drawable/btn_corners"
        />

</LinearLayout>