<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/viewMenuSpace"
    tools:context="client.petmooby.com.br.petmooby.fragment.MenuFragment">

    <View
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/viewMenuSpace"
        />
    <android.support.v7.widget.AppCompatButton
        style="@style/MainMenuButton"
        android:id="@+id/btnMenuAppName"
        android:text="@string/app_name"
        android:drawableLeft="@drawable/ic_paw_24"
       />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/viewMenuSpace"
        android:text="@string/Options"
        android:textColor="@color/primaryDarkColor"

        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        />

    <android.support.v7.widget.AppCompatButton
        style="@style/MainMenuButton"
        android:id="@+id/btnMenuVeterinaryPartners"
        android:text="@string/VeterinaryPartners"
        android:drawableLeft="@drawable/ic_paw_24"
        android:drawableRight="@drawable/ic_chevron_right"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/viewMenuSpace"
        android:text="@string/About"
        android:textColor="@color/primaryDarkColor"

        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        />
    <android.support.v7.widget.AppCompatButton
        style="@style/MainMenuButton"
        android:id="@+id/btnMenuRateApp"
        android:text="@string/RateApp"
        android:drawableLeft="@drawable/ic_paw_24"
        android:drawableRight="@drawable/ic_chevron_right"
       />

    <android.support.v7.widget.AppCompatButton
        style="@style/MainMenuButton"
        android:id="@+id/btnMenuTermsOfUse"
        android:text="@string/TermsOfUse"
        android:drawableRight="@drawable/ic_chevron_right"
        android:drawableLeft="@drawable/ic_paw_24"
         />

    <android.support.v7.widget.AppCompatButton
        style="@style/MainMenuButton"
        android:id="@+id/btnMenuContactUs"
        android:text="@string/ContactUs"
        android:drawableRight="@drawable/ic_chevron_right"
        android:drawableLeft="@drawable/ic_paw_24"
         />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/viewMenuSpace"
        android:text="@string/helpUs"
        android:textColor="@color/primaryDarkColor"

        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        />
    <android.support.v7.widget.AppCompatButton
        style="@style/MainMenuButton"
        android:id="@+id/btnMenuLogout"
        android:text="@string/Logout"
        android:drawableLeft="@drawable/ic_paw_24"

       />


</LinearLayout>
