<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="client.petmooby.com.br.petmooby.actvity.RegisterUserActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarRegisterUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:theme="@style/toolbarTheme"
            />

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="45sp"
                android:fontFamily="@font/marker_felt_thin"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:layout_marginTop="15dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPassword"
                />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSaveNewUserRegister"
                style="@style/btnStyle"
                android:layout_marginTop="45dp"
                android:text="@string/register"
                android:textAllCaps="true"


                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
