<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="client.petmooby.com.br.petmooby.actvity.VaccineActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarVaccine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:theme="@style/toolbarTheme"
        />

    </com.google.android.material.appbar.AppBarLayout>
   <ScrollView
       android:id="@+id/scrollVaccine"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vaccine"
                android:textAllCaps="true"
                android:layout_marginLeft="5dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                >
                <ImageView
                    android:id="@+id/ivVaccineIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/vaccine_animal"
                    android:layout_marginLeft="5dp"

                    />
                <EditText
                    android:id="@+id/edtVaccineDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="80"
                    android:layout_toRightOf="@+id/ivVaccineIcon"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:hint="@string/vaccine"
                    />
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vaccineReminder"
                android:layout_marginTop="25dp"
                android:textAllCaps="true"
                android:layout_marginLeft="5dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                >

                <TextView
                    android:id="@+id/txtVaccineDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/date"
                    android:textSize="@dimen/txtMedium"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    />


                <EditText
                    android:id="@+id/edtVaccineDate"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:focusable="false"
                    android:inputType="none"
                    android:hint="@string/date"
                    />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vaccineTextAdvice"
                android:layout_margin="8dp"
                />




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vaccineRecord"
                android:textAllCaps="true"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="5dp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                >
                <ImageView
                    android:id="@+id/ivVaccineClinic"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/icons8_doctor_30"
                    android:layout_marginLeft="5dp"

                    />
                <EditText
                    android:id="@+id/edtVaccineClinic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/veterinaryOrClinic"
                    android:layout_toRightOf="@+id/ivVaccineClinic"
                    android:imeOptions="actionNext"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <ImageView
                    android:id="@+id/ivVaccineCalender"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/icons8calendar60"
                    android:layout_marginLeft="5dp"
                    />
                <EditText
                    android:id="@+id/edtVaccineApplication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vaccineDateApplication"
                    android:layout_toRightOf="@+id/ivVaccineCalender"
                    android:imeOptions="actionNext"

                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <ImageView
                    android:id="@+id/ivVaccinePrice"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/icons8_cash_in_hand_60"
                    android:layout_marginLeft="5dp"
                    />
                <EditText
                    android:id="@+id/edtVaccinePrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:layout_toRightOf="@+id/ivVaccinePrice"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <ImageView
                    android:id="@+id/ivVaccineNotes"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/icons8_compose_60"
                    android:layout_marginLeft="5dp"
                    />
                <EditText
                    android:id="@+id/edtVaccineNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes"
                    android:layout_toRightOf="@+id/ivVaccineNotes"
                    android:minLines="4"
                    android:maxLines="10"
                    android:gravity="top|left"
                    android:scrollbars="vertical"
                    android:imeOptions="actionDone"
                    />
            </RelativeLayout>

            <Button
                android:id="@+id/btnAddVaccine"
                style="@style/btnStyle"
                android:layout_marginTop="8dp"
                android:text="@string/applyVaccine"
                android:textAllCaps="true"
                />

            <LinearLayout
                android:id="@+id/llVaccineHistoricList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:textAllCaps="true"
                    android:layout_marginLeft="5dp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/primaryColor"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcViewHistoricVaccine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    >


                </androidx.recyclerview.widget.RecyclerView>
                <include layout="@layout/empty_view_list_layout"/>

            </LinearLayout>




        </LinearLayout>
   </ScrollView>
</LinearLayout>
